--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -15,7 +15,7 @@ source:
 build:
   noarch: python
   number: 1
-  script: python -m pip install --no-deps --ignore-installed
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   host:
