--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "spyder-kernels" %}
-{% set version = "0.2.6" %}
+{% set version = "0.3.0" %}
 {% set hash_type = "sha256" %}
-{% set hash = "26c8e9f78f90ac107ee72ccf78b2550d65d437010990aaf30396d0f90af3282c" %}
+{% set hash = "dcf54b519db2a11dcbbc07d3d06caea61b102f0d498c0282a08d00d91b578005" %}
 
 package:
   name: {{ name|lower }}
@@ -13,9 +13,8 @@ source:
   {{ hash_type }}: {{ hash }}
 
 build:
-  noarch: python
-  number: 1
-  script: python -m pip install --no-deps --ignore-installed .
+  number: 0
+  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed --no-cache-dir -vvv"
 
 requirements:
   host:
@@ -25,11 +24,11 @@ requirements:
 
   run:
     - python
-    # https://github.com/spyder-ide/spyder/issues/7842#issuecomment-419149113
-    - ipykernel >=4.8.2,!=4.9.0
+    - ipykernel >4.9.0
     - pyzmq >=17
     - jupyter_client >=5.2.3
     - cloudpickle
+    - wurlitzer  # [not win]
 
 test:
   imports:
