Port changes from 0.x branch

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,9 +13,8 @@ source:
   {{ hash_type }}: {{ hash }}
 
 build:
-  noarch: python
   number: 0
-  script: python -m pip install --no-deps --ignore-installed .
+  script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vvv"
 
 requirements:
   host:
@@ -25,10 +24,11 @@ requirements:
 
   run:
     - python
-    - ipykernel >=4.8.2
+    - ipykernel >4.9.0
     - pyzmq >=17
     - jupyter_client >=5.2.3
     - cloudpickle
+    - wurlitzer  # [not win]
 
 test:
   imports:
