--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,7 @@
 {% set name = "spyder-kernels" %}
-{% set version = "1.4.0" %}
+{% set version = "1.5.0" %}
 {% set hash_type = "sha256" %}
-{% set hash = "d2b4d83e74b45c8e4d1ccff15e53d0f6a4ac5e02c32746a6a7f65e05d585deca" %}
+{% set hash = "b92880c38cbc0cc73e0a1180e1164d8285e2f25c4c830fd91110828daa36feaa" %}
 
 package:
   name: {{ name|lower }}
@@ -26,9 +26,9 @@ requirements:
     - python
     - ipykernel >4.9.0
     - pyzmq >=17
-    - jupyter_client >=5.2.3
+    - jupyter_client >=5.2.5
     - cloudpickle
-    - wurlitzer  # [not win]
+    - wurlitzer >=1.0.3  # [not win]
 
 test:
   imports:
