--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,10 +24,10 @@ requirements:
 
   run:
     - python
-    - ipykernel >4.9.0
+    - ipykernel >4.9.0  # [py2k]
+    - ipykernel >=5.1.3  # [py3k]
     - pyzmq >=17
     - jupyter_client >=5.3.4
-    - jupyter_core >=4.6.0
     - cloudpickle
     - wurlitzer >=1.0.3  # [not win]
 
