MNT: Re-rendered with conda-build 3.18.11, conda-smithy 3.6.3, and conda-forge-pinning 2019.12.02

--- a/.ci_support/win_python2.7.yaml
+++ b/.ci_support/win_python2.7.yaml
@@ -1,7 +1,7 @@
 channel_sources:
 - conda-forge,defaults
 channel_targets:
-- conda-forge beta
+- conda-forge main
 pin_run_as_build:
   python:
     min_pin: x.x
