--- a/.ci_support/linux_python2.7.yaml
+++ b/.ci_support/linux_python2.7.yaml
@@ -1,7 +1,7 @@
 channel_sources:
 - conda-forge,defaults
 channel_targets:
-- conda-forge beta
+- conda-forge main
 docker_image:
 - condaforge/linux-anvil-comp7
 pin_run_as_build:
