--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -23,11 +23,11 @@ requirements:
 
   run:
     - python
-    - ipykernel >4.9.0  # [py2k]
-    - ipykernel >=5.1.3  # [py3k]
-    - pyzmq >=17
-    - jupyter_client >=5.3.4
     - cloudpickle
+    - ipykernel >=5.1.3
+    - ipython >=7.6.0
+    - jupyter_client >=5.3.4
+    - pyzmq >=17
     - wurlitzer >=1.0.3  # [not win]
 
 test:
