--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "spyder-kernels" %}
-{% set version = "2.4.2" %}
+{% set version = "2.4.3" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/spyder-kernels-{{ version }}.tar.gz
-  sha256: 97586eabda1f714c26035b5b01ed7c2e3f539b0de76bd479af5003f5f19b3eb7
+  sha256: d1a364ab89da716d91671ba9d89ef8f1966068bba0e470797a489653829caaf3
 
 build:
   script: {{ PYTHON }} -m pip install . -vv
@@ -25,8 +25,8 @@ requirements:
     - python >=3.7
     - cloudpickle
     - ipykernel >=6.16.1,<7.0.0
-    - ipython >=7.31.1,<9.0.0
-    - jupyter_client >=7.4.9,<8.0.0
+    - ipython >=7.31.1,<9.0.0,!=8.8.0,!=8.9.0,!=8.10.0
+    - jupyter_client >=7.4.9,<9.0.0
     - pyzmq >=22.1.0
     - wurlitzer >=1.0.3  # [unix]
     - __unix  # [unix]
