--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,14 +18,14 @@ build:
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.8
     - pip
     - setuptools
   run:
-    - python >=3.7
+    - python >=3.8
     - cloudpickle
     - ipykernel >=6.23.2,<7.0.0
-    - ipython >=7.31.1,<9.0.0,!=8.8.0,!=8.9.0,!=8.10.0,!=8.11.0,!=8.12.0,!=8.12.1
+    - ipython >=8.12.2,<9.0.0,!=8.17.1
     - jupyter_client >=7.4.9,<9.0.0
     - pyzmq >=22.1.0
     - wurlitzer >=1.0.3  # [unix]
