--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "spyder-kernels" %}
-{% set version = "3.0.0b2" %}
+{% set version = "3.0.0b3" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/spyder-kernels-{{ version }}.tar.gz
-  sha256: 7df5c2219c0410a129dd51d4bb8003ae1c8777323e83319dc379a4c887e1d509
+  sha256: 0e57484da9871bcf5aa5c31d4e229ae9a4b503b93a9e6e830202cf498cf205df
 
 build:
   script: {{ PYTHON }} -m pip install . -vv
@@ -18,14 +18,14 @@ build:
 
 requirements:
   host:
-    - python >=3.7
+    - python >=3.8
     - pip
     - setuptools
   run:
-    - python >=3.7
+    - python >=3.8
     - cloudpickle
     - ipykernel >=6.23.2,<7.0.0
-    - ipython >=7.31.1,<9.0.0,!=8.8.0,!=8.9.0,!=8.10.0,!=8.11.0,!=8.12.0,!=8.12.1
+    - ipython >=8.12.2,<9.0.0,!=8.17.1
     - jupyter_client >=7.4.9,<9.0.0
     - pyxdg >=0.26  # [unix]
     - pyzmq >=22.1.0
