--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,6 +27,7 @@ requirements:
     - ipykernel >=6.29.3,<7.0.0
     - ipython >=8.12.2,<9.0.0,!=8.17.1
     - jupyter_client >=7.4.9,<9.0.0
+    - pyxdg >=0.26  # [unix]
     - pyzmq >=24.0.0
     - wurlitzer >=1.0.3  # [unix]
     - __unix  # [unix]
