--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,34 +1,36 @@
 {% set name = "spyder-kernels" %}
-{% set version = "3.0.0b9" %}
+{% set python_min = "3.9" %}
+{% set version = "3.1.0b1" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/spyder_kernels-{{ version }}.tar.gz
-  sha256: e0989662fb06da257648d6b6b357cfa0664168963113dcf0e57e8937567d8e3b
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace('-', '_') }}-{{ version }}.tar.gz
+  sha256: b61e06241411fadc384300d8c102569dca4a24c4deda75c70fb4c103483ec9f1
 
 build:
   script: {{ PYTHON }} -m pip install . -vv
   number: 0
   noarch: python
   string: "unix_pyh{{ PKG_HASH }}_{{ PKG_BUILDNUM }}"  # [unix]
-  string: "win_pyh{{ PKG_HASH }}_{{ PKG_BUILDNUM }}"   # [win]
+  string: "win_pyh{{ PKG_HASH }}_{{ PKG_BUILDNUM }}"  # [win]
 
 requirements:
   host:
-    - python >=3.8
+    - python {{ python_min }}
     - pip
     - setuptools
   run:
-    - python >=3.8
+    - python >={{ python_min }}
     - cloudpickle
     - ipykernel >=6.29.3,<7.0.0
-    - ipython >=8.12.2,<9.0.0,!=8.17.1
+    - ipython >=8.13.0,<10.0.0,!=8.17.1,!=9.1.0,!=9.2.0,!=9.3.0,!=9.4.0
     - jupyter_client >=7.4.9,<9.0.0
     - pyxdg >=0.26  # [unix]
-    - pyzmq >=22.1.0
+    - pyzmq >=24.0.0
+    - traitlets >=5.14.3
     - wurlitzer >=1.0.3  # [unix]
     - __unix  # [unix]
     - __win   # [win]
@@ -39,6 +41,7 @@ test:
   commands:
     - pip check
   requires:
+    - python {{ python_min }}
     - pip
 
 about:
