--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "spyder-kernels" %}
-{% set python_min = "3.8" %}
-{% set version = "3.0.5" %}
+{% set python_min = "3.9" %}
+{% set version = "3.1.0" %}
 
 package:
   name: {{ name|lower }}
@@ -8,7 +8,7 @@ package:
 
 source:
   url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/{{ name.replace('-', '_') }}-{{ version }}.tar.gz
-  sha256: ff7a1e832eed723575882b86c81c8f82ed8d6929c05c399bac2771d605578cd8
+  sha256: 1c4b039dd0e8e4b9fe503a6e6b3354a40b90f2fd009d1fb08e40f7b5aeb167fe
 
 build:
   script: {{ PYTHON }} -m pip install . -vv
@@ -26,7 +26,7 @@ requirements:
     - python >={{ python_min }}
     - cloudpickle
     - ipykernel >=6.29.3,<7.0.0
-    - ipython >=8.12.2,<9.0.0,!=8.17.1
+    - ipython >=8.15.0,<10.0.0,!=8.17.1,!=9.1.0,!=9.2.0,!=9.3.0,!=9.4.0
     - jupyter_client >=7.4.9,<9.0.0
     - pyxdg >=0.26  # [unix]
     - pyzmq >=24.0.0
