Update version to 3.1.0

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "spyder-kernels" %}
 {% set python_min = "3.9" %}
-{% set version = "3.1.0b2" %}
+{% set version = "3.1.0" %}
 
 package:
   name: {{ name|lower }}
